--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -15,3 +15,7 @@ div#wall #tag-2 + #tag-3.slick {
 #wall .parent #tag-4 {
   display: none;
 }
+
+div#wall .parent + .parent #tag-5.slick {
+  display: none;
+}
