--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -20,6 +20,6 @@ div#wall .parent + .parent #tag-5.slick {
   display: none;
 }
 
-div#wall div:nth-child(3) div.parent div:last-child div#tag-6 {
+div#wall div.parent div:last-child div#tag-6 {
   display: none;
 }
