--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -23,3 +23,7 @@ div#wall .parent + .parent #tag-5.slick {
 div#wall div.parent + div.parent div:last-child div#tag-6 {
   display: none;
 }
+
+body div#wall div.parent div:first-child > #tag-7.slick {
+  display: none;
+}
